server using middle where connect

--- a/readme.html
+++ b/readme.html
@@ -1,10 +1,5 @@
-<html>
-<h1>very simple node server with package.json</h1>
+2nd simple server with connect middleware
 
+first -> npm install connect
 
-<p>this works with just two files<br>
-    package.json and server.js</p>
-
-<p>git clone, npm install
-    and run node server</p>
-</html>
+2 files required package.json and server.js
